# tidy_finance_vn_vi

./: .gitignore  00_institutional_background.qmd  01_accessing_and_managing_financial_data.qmd  01_working_with_stock_returns.qmd  02_datacore_data.qmd  02_modern_portfolio_theory.qmd  03_capm.qmd  03_market_microstructure.qmd  04_financial_statement_analysis.qmd  04_risk_free_rate_construction.qmd  05_discounted_cash_flow.qmd  06_accessing_and_managing_financial_data.qmd  07_datacore_data.qmd  08_beta_estimation.qmd  09_univariate_portfolio_sort.qmd  10_size_sorts.qmd  11_value_bivariate.qmd  12_fama_french.qmd  12_size_sorts.qmd  13_fama_macbeth.qmd  13_momemtum.qmd  13_momentum.qmd  13_value_bivariate.qmd  14_portfolio_weighting_and_rebalancing.qmd  15_exchange_rate.qmd  15_missing_data_and_survivorship.qmd  16_compound_return.qmd  16_institutional_ownership.qmd  16_liquidity_and_turnover_measures.qmd  17_event_studies.qmd  17_sue.qmd  18_event_studies.qmd  18_sue.qmd  19_divop.qmd  23_factor_construction_principles.qmd  25_factor_zoo_and_multiple_testing.qmd  26_time_series_vs_cross_section.qmd  30_financial_statement_analysis.qmd  30_institutional_ownership.qmd  31_discounted_cash_flow.qmd  (+50 more)
.jupyter_cache/: global.db
_book/: 00_institutional_background.html  03_capm.html  05_discounted_cash_flow.html  07_datacore_data.html  08_beta_estimation.html  09_univariate_portfolio_sort.html  10_size_sorts.html  11_value_bivariate.html  12_fama_french.html  13_fama_macbeth.html  20_conclusion.html  _13_fama_macbeth.html  intro.html  references.html  search.json  summary.html  (+1 more)
(+302 files in other folders)
