[project]
name = "tidyfinance-replicate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "arch>=8.0.0",
    "boto3>=1.42.38",
    "diagrams>=0.25.1",
    "ggplot>=0.11.5",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "jupyter-cache>=1.0.1",
    "linearmodels>=7.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "plotnine>=0.15.3",
    "polars>=1.37.1",
    "pytz>=2025.2",
    "regtabletotext>=0.0.12",
    "scikit-learn>=1.8.0",
    "tidyfinance>=0.2.5",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "vnstock>=3.4.1",
    "vnstock3>=3.2.1",
    "xlrd>=2.0.2",
]
